tests/negative/gold/indent2_test.gold
tests/negative/indent2_test.toit:6:5: error: All expressions in a sequence must be indented the same way
    break
    ^~~~~
Compilation failed.
